adding the repo/nodejs to Nexus server

--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         DEV_PROJECT = "whitedarr-books-dev"
         STAGE_PROJECT = "whitedarr-books-stage"
         APP_GIT_URL = "https://github.com/whitedarr/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.na45.prod.nextcle.com/"
+        NEXUS_SERVER = "http://nexus-common.apps.na45.prod.nextcle.com/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
